# codex-playground

./: .gitignore  README.md  app.py  codex_fix.patch  pyproject.toml
.github/workflows/: pytest.yml
data/aliases/: zh_seed.csv
src/dog_nutrition/: __init__.py  cli.py  energy.py  fdc_import.py  foods_db.py  models.py  nrc.py  nutrients.py  optimizer.py  search.py  toxicity.py
tests/: test_app_smoke_paths.py  test_cn_search.py  test_cn_search_ranking.py  test_energy.py  test_expand_query.py  test_fdc_import.py  test_foods.py  test_foods_db_search.py  test_import_search_optimizer.py  test_search_aliases.py  test_search_cn.py
tools/: check_db.py  check_expand.py  check_search.py  import_fdc_bundle.ps1  verify_all.ps1  verify_search.py
